// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  testID="inbox.conversation-message-123456789"
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderTopColor": "#C7CDD1",
        "borderTopWidth": 0.5,
        "flex": 1,
        "padding": 16,
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
        }
      }
    >
      <View
        accessibilityLabel="artorias of the abyss to me May 31 at 11:59 PM"
        accessible={true}
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "height": 32,
              "marginRight": 8,
              "width": 32,
            }
          }
        >
          <Avatar
            avatarURL={undefined}
            height={32}
            onPress={[Function]}
            userName="artorias of the abyss"
          />
        </View>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                undefined,
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              artorias of the abyss 
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 14,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              to me
            </Text>
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#8B969E",
                  "fontSize": 12,
                },
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            May 31 at 11:59 PM
          </Text>
        </View>
      </View>
      <TouchableOpacity
        accessibilityLabel="Message options"
        accessibilityTraits="button"
        accessible={true}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "height": 32,
            "justifyContent": "center",
            "width": 32,
          }
        }
        testID="conversation-message.kabob-123456789"
        underlayColor="#ffffff00"
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/kabob.png",
            }
          }
          style={
            Object {
              "height": 18,
              "tintColor": "#8B969E",
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
              "width": 18,
            }
          }
        />
      </TouchableOpacity>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "paddingTop": 16,
        }
      }
      testID={undefined}
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          this is neat
        </Text>
      </View>
    </View>
    <TouchableOpacity
      onPress={[Function]}
      testID="inbox.conversation-message-123456789.attachment-1"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/attachment.png",
            }
          }
          style={
            Object {
              "tintColor": "#008EE2",
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#008EE2",
                "fontFamily": ".SFUIDisplay-bold",
                "fontSize": 14,
                "marginLeft": 6,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          something.pdf
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`renders correctly with author being the logged in user 1`] = `
<View
  testID="inbox.conversation-message-123456789"
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderTopColor": "#C7CDD1",
        "borderTopWidth": 0.5,
        "flex": 1,
        "padding": 16,
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
        }
      }
    >
      <View
        accessibilityLabel="me to hey there i am jane May 31 at 11:59 PM"
        accessible={true}
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "height": 32,
              "marginRight": 8,
              "width": 32,
            }
          }
        >
          <Avatar
            avatarURL={undefined}
            height={32}
            onPress={[Function]}
            userName="hey there i am bob"
          />
        </View>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                undefined,
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              me 
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 14,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              to hey there i am jane
            </Text>
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#8B969E",
                  "fontSize": 12,
                },
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            May 31 at 11:59 PM
          </Text>
        </View>
      </View>
      <TouchableOpacity
        accessibilityLabel="Message options"
        accessibilityTraits="button"
        accessible={true}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "height": 32,
            "justifyContent": "center",
            "width": 32,
          }
        }
        testID="conversation-message.kabob-123456789"
        underlayColor="#ffffff00"
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/kabob.png",
            }
          }
          style={
            Object {
              "height": 18,
              "tintColor": "#8B969E",
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
              "width": 18,
            }
          }
        />
      </TouchableOpacity>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "paddingTop": 16,
        }
      }
      testID={undefined}
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          this is neat
        </Text>
      </View>
    </View>
    <TouchableOpacity
      onPress={[Function]}
      testID="inbox.conversation-message-123456789.attachment-1"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/attachment.png",
            }
          }
          style={
            Object {
              "tintColor": "#008EE2",
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#008EE2",
                "fontFamily": ".SFUIDisplay-bold",
                "fontSize": 14,
                "marginLeft": 6,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          something.pdf
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`renders correctly with author lots of participants 1`] = `
<View
  testID="inbox.conversation-message-123456789"
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderTopColor": "#C7CDD1",
        "borderTopWidth": 0.5,
        "flex": 1,
        "padding": 16,
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 12,
        }
      }
    >
      <View
        accessibilityLabel="me to 3 others May 31 at 11:59 PM"
        accessible={true}
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "height": 32,
              "marginRight": 8,
              "width": 32,
            }
          }
        >
          <Avatar
            avatarURL={undefined}
            height={32}
            onPress={[Function]}
            userName="hey there i am bob"
          />
        </View>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                undefined,
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              me 
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#8B969E",
                    "fontSize": 14,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                ]
              }
            >
              to 3 others
            </Text>
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#8B969E",
                  "fontSize": 12,
                },
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            May 31 at 11:59 PM
          </Text>
        </View>
      </View>
      <TouchableOpacity
        accessibilityLabel="Message options"
        accessibilityTraits="button"
        accessible={true}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "height": 32,
            "justifyContent": "center",
            "width": 32,
          }
        }
        testID="conversation-message.kabob-123456789"
        underlayColor="#ffffff00"
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/kabob.png",
            }
          }
          style={
            Object {
              "height": 18,
              "tintColor": "#8B969E",
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
              "width": 18,
            }
          }
        />
      </TouchableOpacity>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "paddingTop": 16,
        }
      }
      testID={undefined}
    >
      <View
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={2}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          this is neat
        </Text>
      </View>
    </View>
    <TouchableOpacity
      onPress={[Function]}
      testID="inbox.conversation-message-123456789.attachment-1"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/attachment.png",
            }
          }
          style={
            Object {
              "tintColor": "#008EE2",
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "color": "#008EE2",
                "fontFamily": ".SFUIDisplay-bold",
                "fontSize": 14,
                "marginLeft": 6,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          something.pdf
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;
